--- a/views/users/view.ejs
+++ b/views/users/view.ejs
@@ -14,3 +14,5 @@
              Oh, we do have an Email: <b><%= user.email %></b>.</div>
              <div class="panel-footer"><a href="/users">Back</a></div>
   </div>
+  <%- include('../partials/footer') %>
+
